# just_the_next

./: .prettierrc  LICENSE  README.md
.github/workflows/: ci-tests.yml
db/: app.db
frontend/: package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/Components/: Layout.tsx
frontend/src/Components/Auth/: LogIn.tsx  SignUp.tsx
webserver/: app.py  models.py  pyproject.toml
